--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -11,3 +11,12 @@ version-resolver:
     labels:
       - 'patch'
   default: patch
+template: |
+  ## Changes
+  $CHANGES
+  
+  ## Docker Images
+  [![docker](https://github.com/cased/ssh-oauth-handlers/workflows/docker/badge.svg?branch=v$RESOLVED_VERSION)](https://github.com/cased/ssh-oauth-handlers/actions?query=workflow%3Adocker+branch%3Av$RESOLVED_VERSION)
+  ```
+  ghcr.io/cased/ssh-oauth-handlers:v$RESOLVED_VERSION
+  ```
